--- a/web/css/a1.css
+++ b/web/css/a1.css
@@ -9,3 +9,71 @@ p.center {
 	font-size: 2em;
 	font-family: Verdana;
 }
+
+p.time {
+	width: 40%;
+	float: right;
+	min-height: 40px;
+	text-align: right;
+	padding: 1.3%;
+	font-family: Verdana;
+}
+
+p.title {
+	width: 60%;
+	float: left;
+	text-align: right;
+    font-family: 'Galindo', cursive;
+	font-size: 2.5em;
+	min-height: 10px;
+	/*padding-left: 1%;*/
+}
+
+li.last {
+	padding-right: 1.8%; 
+}
+
+a.assignment {
+	color: black;
+}
+
+a.assignment:hover {
+	font-size: 1.3em;
+	color: #31a1d1;
+}
+
+ul.assign {
+	list-style-type: circle;
+}
+
+.assignments {
+	width: 100%;
+	text-align: center;
+	font-family: Verdana;
+	font-size: 1.3em;
+}
+
+.full {
+	width: 100%;
+}
+
+.active1 {
+	color: black;
+}
+
+.active1:hover {
+	color: red;
+}
+
+.breadcrumb {
+	width: 100%;
+	text-align: right;
+	font-family: Verdana; 
+	/*padding-right: 0;*/
+	/*padding-left: 0;*/
+}
+
+.container {
+	width: 100%;
+	padding: 0;
+}
