--- a/web/css/a1.css
+++ b/web/css/a1.css
@@ -1,5 +1,5 @@
 .body {
-	width: 100%;
+	max-width: 100%;
 	margin: .5% 0;
 	background-color: #d4d4d4;
 }
@@ -48,33 +48,59 @@ div.slideshow {
 div.personalPhoto {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	width: 20%;
-	/*float: left;*/
-	margin: 1% 3%;	
+	float: left;
+	margin: 1% 2%;
+	border: 1px solid black;	
+}
+
+div.packers {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	width: 27%;
+	float: right;
+	margin: 1% 2%;
+	border: 1px solid black;	
+}
+
+.item {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border: 2px solid black;	
+}
+
+img.packPhoto {
+	width: 100%; 
+}
+
+div.personalPhoto:hover {
+	-ms-transform: scale(1.1); 
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); 
+}
+
+div.packers:hover {
+	-ms-transform: scale(1.1); 
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); 
 }
 
 #the-gal {
 	width: 100%;
 }
 
-div.gal-text {
-	float: left;
-	width: 20%;
-	text-align: center;
-	margin: 0 3%;
-	font-family: Verdana;
-	font-size: 1.4em;
+#allPhotos {
+	max-width: 100%; 
 }
 
 li.last {
 	padding-right: 1.8%; 
 }
 
+
 a.assignment {
 	color: black;
 }
 
 a.assignment:hover {
-	font-size: 1.2em;
+	font-size: 1.05em;
 	color: #e8125a;
 }
 
@@ -83,13 +109,16 @@ ul.assign {
 }
 
 .photoItems {
-	clear: both;
-	width: 100%;
-	margin: 0 35%;
+	width: 40%;
+	float: left;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 10% 0 10% 3%;
 }
 
 .photos1 {
-	width: 10%;
+	width: 35%;
 }
 
 .assignments {
@@ -102,6 +131,14 @@ ul.assign {
 	padding: 1%;
 	border: 3px solid black;
 	border-radius: 6px;
+	background: #f9f9f9;
+}
+
+.border {
+	border: 1px solid black;
+	text-align: center;
+	font-size: 1.5em;
+	font-family: Verdana;
 	background: #f9f9f9;
 }
 
@@ -124,8 +161,6 @@ ul.assign {
 	font-family: Verdana;
 	border-bottom: 3px solid black;
 	border-radius: 1%; 
-	/*padding-right: 0;*/
-	/*padding-left: 0;*/
 }
 
 .container {
