Added session variables and cart items are now saved to an array. TO DO: implement removing items of 'hats' session array

--- a/web/css/a2.css
+++ b/web/css/a2.css
@@ -7,6 +7,16 @@ p.itemHat {
 	width: 100%;
 }
 
+div.quantity {
+	float: right;
+	margin: 7% 2%;
+	width: auto;
+}
+
+#quan {
+	/*padding: 4% 0;*/
+}
+
 .shared {
 	/*width: 100%;*/
 	text-align: left;
