--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -1,5 +1,16 @@
 div.rb_item {
 	width: 50%;
 	margin: 1% 25%;
-	background-color: #5b3a3a; 
+	background-color: #5b3a3a;
+	border: 4px solid #c3a2a2; 
+	border-radius: 13px; 
+	padding: .8%;  
+}
+
+body {
+	background: #442C2C; 
+	border: 5px solid #c3a2a2; 
+	margin: 15px; 
+	padding: .5%; 
+	border-radius: 13px;
 }
