--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -1,3 +1,11 @@
+body {
+	background: #442C2C; 
+	border: 5px solid #c3a2a2; 
+	margin: 15px; 
+	padding: .5%; 
+	border-radius: 13px;
+}
+
 div.rb_item {
 	width: 50%;
 	margin: 1% 25%;
@@ -7,10 +15,10 @@ div.rb_item {
 	padding: .8%;  
 }
 
-body {
-	background: #442C2C; 
-	border: 5px solid #c3a2a2; 
-	margin: 15px; 
-	padding: .5%; 
-	border-radius: 13px;
+p.white {
+	color: white;
+	margin-right: auto;
+	margin-left: auto;
+	font-size: 1.12em;
+	font-family: Verdana;
 }
