--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -29,6 +29,8 @@ img.center {
     margin-right: auto;
     width: 40%;
     overflow: hidden;
+    height: 7.5%; 
+    width: 39.62%;
 }
 
 p.def {
@@ -37,4 +39,11 @@ p.def {
 	margin-left: 52%;
 	font-size: 1.05em;
 	font-family: Tahoma "Times New Roman";
+	/*margin-left: 52%;*/
+}
+
+#banner {
+	border-bottom: 5px solid #c3a2a2; 
+	padding-bottom: .5%; 
+	border-radius: 5px;
 }
