--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -34,8 +34,8 @@ img.center {
 
 p.def {
 	color: white;
-	margin: auto auto auto 47%;
-	font-size: 1.05em;
+	margin: auto 40%;
+	font-size: .85em;
 	font-family: Tahoma "Times New Roman";
 }
 
