--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -34,7 +34,7 @@ img.center {
 
 p.def {
 	color: white;
-	margin: auto 35%;
+	margin: 1% 35%;
 	font-size: 1em;
 	font-family: Tahoma "Times New Roman";
 }
