--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -8,12 +8,13 @@ body {
 
 div.rb_item {
 	width: 15%;
-	margin: 1% 25%;
+	margin: 1% 50% 1% 5%;
 	float: right;
 	background-color: #5b3a3a;
 	border: 4px solid #c3a2a2; 
 	border-radius: 13px; 
-	padding: .8%;  
+	padding: .8%;
+	clear: both;  
 }
 
 p.white {
@@ -21,8 +22,7 @@ p.white {
 	margin-right: auto;
 	margin-left: auto;
 	font-size: 1.12em;
-	font-family: Verdana;
-	clear: both;
+	font-family: Verdana;	
 }
 
 img.center {
