--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -38,6 +38,7 @@ p.def {
 
 div.rb_photo {
 	width: 10%;
+	margin: 1% auto;
 	float: left;
 	clear: both;
 }
@@ -48,8 +49,8 @@ div.row {
 }
 
 div.rb_item {
-	width: 80%;
-	/*margin: 1% 50% 1% 5%;*/
+	width: 15%;
+	margin: 3% 25%;
 	float: right;
 	background-color: #5b3a3a;
 	border: 4px solid #c3a2a2; 
