--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -46,14 +46,18 @@ div.rb_photo {
 div.row {
 	width: 100%;
 	background: blue;
+	background-color: #5b3a3a;
+	border: 4px solid #c3a2a2; 
+	border-radius: 13px; 
+	padding: .8%;
 }
 
 div.rb_item {
 	width: 15%;
 	margin: 3% 35% 3% 0;
 	float: right;
-	background-color: #5b3a3a;
+	/*background-color: #5b3a3a;
 	border: 4px solid #c3a2a2; 
 	border-radius: 13px; 
-	padding: .8%;	  
+	padding: .8%;*/	  
 }
