--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -31,8 +31,8 @@ img.center_photo {
     /*max-width: 100px;*/
     overflow: hidden;
     float: left;
-    width: 30%;
-    height: 100px; 
+    /*width: 30%;*/
+    max-height: 10%; 
 }
 
 p.def {
