--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -32,7 +32,7 @@ img.center_photo {
     overflow: hidden;
     float: left;
     /*width: 30%;*/
-    max-height: 1%; 
+    max-height: 10%; 
 }
 
 p.def {
@@ -50,7 +50,7 @@ p.def {
 
 div.rb_photo {
 	width: 10%;
-	margin: 1% 0 1% 35%;
+	/*margin: 1% 0 1% 35%;*/
 	float: left;
 	clear: both;
 }
