--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -56,7 +56,7 @@ div.rb_photo {
 }
 
 div.row {
-	/*width: 100%;*/
+	width: 10%;
 	background-color: #5b3a3a;
 	border: 4px solid #c3a2a2; 
 	border-radius: 13px; 
