--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -56,12 +56,12 @@ div.rb_photo {
 }
 
 div.row {
-	width: 10%;
-	background-color: #5b3a3a;
+	/*width: 100%;*/
+	/*background-color: #5b3a3a;
 	border: 4px solid #c3a2a2; 
 	border-radius: 13px; 
 	padding: .8%;
-	margin: 3% 25%;
+	margin: 3% 25%;*/
 }
 
 div.rb_item {
