--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -25,16 +25,6 @@ img.center {
     height: 2%; 
 }
 
-img.center_photo {
-	/*display: block;*/
-    /*margin-right: auto;*/
-    /*max-width: 100px;*/
-    overflow: hidden;
-    float: left;
-    /*width: 30%;*/
-    max-height: 10%; 
-}
-
 p.def {
 	color: white;
 	margin: 1% 35%;
@@ -50,7 +40,7 @@ p.def {
 
 div.rb_photo {
 	width: 10%;
-	/*margin: 1% 0 1% 35%;*/
+	margin: 1% 0 1% 35%;
 	float: left;
 	clear: both;
 }
