--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -63,3 +63,30 @@ div.rb_item {
 	border-radius: 13px; 
 	padding: .8%;	  
 }
+
+
+
+
+
+
+
+
+div.rbItem {
+	background-color: #5b3a3a;
+	border: 4px solid #c3a2a2; 
+	border-radius: 13px; 
+	padding: .8%;
+	margin: 1% 15%;
+}
+
+div.rbPhoto {
+	width: 10%;
+	float: left;
+}
+
+div.rbName {
+	width: 20%;
+	float: right;
+	color: white;
+	clear: both;
+}
