more css styles

--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -82,11 +82,13 @@ div.rbItem {
 div.rbPhoto {
 	width: 10%;
 	float: left;
+	background: purple;
 }
 
 div.rbName {
 	width: 20%;
 	float: right;
 	color: white;
-	clear: both;
+	background: orange;
+	/*clear: both;*/
 }
