--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -76,20 +76,22 @@ div.rbItem {
 	border: 4px solid #c3a2a2; 
 	border-radius: 13px; 
 	padding: .8%;
-	margin: 1% 15%;
-	height: 400px;
+	margin: 1% 30%;
+	height: 200px;
 }
 
 #rbPhoto {
-	width: 10%;
+	width: 7%;
 	float: left;
+	margin: 2% 1% 2% 15%;
 	background: purple;
 }
 
 #rbName {
-	width: 20%;
+	width: 40%;
 	float: right;
 	color: white;
 	background: orange;
+	text-align: center;
 	/*clear: both;*/
 }
