--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -76,14 +76,14 @@ div.rbItem {
 	border: 4px solid #c3a2a2; 
 	border-radius: 13px; 
 	padding: .8%;
-	margin: 1% 30%;
+	margin: 1% 35%;
 	height: 150px;
 }
 
 #rbPhoto {
 	width: 10%;
 	float: left;
-	margin: 2% 1% 2% 15%;
+	margin: 2%;
 	background: purple;
 }
 
@@ -91,8 +91,10 @@ div.rbItem {
 	width: 60%;
 	float: right;
 	color: white;
+	font-size: 1.3em;
 	background: orange;
+	font-family: Verdana;
 	text-align: center;
-	margin: 4% auto; 
+	margin: 6% auto; 
 	/*clear: both;*/
 }
