--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -81,7 +81,7 @@ div.rbItem {
 }
 
 #rbPhoto {
-	width: 10%;
+	width: 12%;
 	float: left;
 	margin: 2%;
 	background: purple;
@@ -91,10 +91,10 @@ div.rbItem {
 	width: 60%;
 	float: right;
 	color: white;
-	font-size: 1.3em;
+	font-size: 1.1em;
 	background: orange;
 	font-family: Verdana;
 	text-align: center;
-	margin: 6% auto; 
+	margin: 15% 5%; 
 	/*clear: both;*/
 }
