--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -77,7 +77,7 @@ div.rbItem {
 	border-radius: 13px; 
 	padding: .8%;
 	margin: 1% 40%;
-	height: 150px;
+	min-height: 150px;
 }
 
 #rbPhoto {
@@ -93,6 +93,6 @@ div.rbItem {
 	font-size: 1.1em;
 	font-family: Verdana;
 	text-align: center;
-	margin: 8% 1%; 
+	margin: 15% 1%; 
 	/*clear: both;*/
 }
