--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -77,17 +77,17 @@ div.rbItem {
 	border-radius: 13px; 
 	padding: .8%;
 	margin: 1% 37%;
-	min-height: 180px;
+	min-height: 200px;
 }
 
 #rbPhoto {
 	width: 22%;
 	float: left;
-	/*margin: 2%;*/
+	margin: 2% 1% 2% 3%;
 }
 
 #rbName {
-	width: 60%;
+	width: 70%;
 	float: right;
 	color: white;
 	font-size: 1.1em;
