--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -98,3 +98,40 @@ div.rbItem {
 	margin: 25% 1%;
 	/*clear: both;*/
 }
+
+
+
+
+
+
+
+
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 20px;
+  height: auto;
+  text-align: center;
+  text-decoration: none;
+  float: right;
+  border-radius: 60%;
+  margin: 60px 5px 0 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+#shadow {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
