more javascript changes

--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -108,7 +108,14 @@ div.rbItem {
 	font-family: Verdana;
 }
 
+#dialog-form { 
+	background: #c3a2a2;
+}
 
+button.view_rb {
+	background: #c3a2a2;
+	color: white;
+}
 
 
 
