--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -196,13 +196,13 @@ div#users-contain table td, div#users-contain table th {
 }
 
 .ui-dialog-titlebar {
-      background: #c3a2a2;
+      background: #442C2C;
 }
 
-/*.ui-dialog {
-	background: orange;
-}*/
+.ui-dialog {
+	background: #c3a2a2;
+}
 
 .ui-dialog-buttonpane {
-	background: #c3a2a2;
+	background: #442C2C;
 }
