--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -212,7 +212,7 @@ div#users-contain table td, div#users-contain table th {
   border-top: 16px solid #3498db;
   width: 120px;
   height: 120px;
-  margin: 40%;
+  margin: 20% 30%;
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
 }
