--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -253,15 +253,15 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
-/*button {
-    background-color: #4CAF50;
-    color: white;
+button {
+    /*background-color: #4CAF50;
+    color: white;*/
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
-}*/
+}
 
 button:hover {
     opacity: 0.8;
