--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -253,9 +253,9 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
-button {
-    /*background-color: #4CAF50;
-    color: white;*/
+button.login {
+    background-color: #4CAF50;
+    color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
