--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -302,6 +302,7 @@ span.psw {
 
 /* The Modal (background) */
 .modal {
+	font-family: Verdana;
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -340,7 +341,7 @@ span.psw {
 }
 
 /* Add Zoom Animation */
-.animate {
+/*.animate {
     -webkit-animation: animatezoom 0.6s;
     animation: animatezoom 0.6s
 }
@@ -353,7 +354,7 @@ span.psw {
 @keyframes animatezoom {
     from {transform: scale(0)} 
     to {transform: scale(1)}
-}
+}*/
 
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
@@ -364,4 +365,9 @@ span.psw {
     .cancelbtn {
        width: 100%;
     }
+}
+
+button.log-click {
+	float: left;
+	border-radius: 3px;
 }
