--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -378,7 +378,7 @@ button.log-click {
 }
 
 #current_user {
-	/*float: right;*/
+	float: right;
 	font-family: Verdana;
 	color: white;
 	text-align: right;
