--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -366,3 +366,16 @@ button.log-click {
 	color: white;
 	text-align: right;
 }
+
+.container_message {
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.time-right {
+    float: right;
+    color: #aaa;
+}
