--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -394,3 +394,13 @@ button.log-click {
 	width: 80%;
 	margin: auto 5%;
 }
+
+button.sendComment {
+  margin: 1% 8%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;  
+}
