--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -273,6 +273,19 @@ button:hover {
     padding: 10px 18px;
     background-color: #f44336;
     color: white;
+    float: left;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+}
+
+.signUpbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+    color: white;
+    float: right;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
