--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -280,11 +280,12 @@ button:hover {
     cursor: pointer;
 }
 
-.signUpbtn {
+.registerbtn {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
     color: white;
+    border: 2px solid black;
     float: right;
     padding: 14px 20px;
     margin: 8px 0;
