--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -280,7 +280,7 @@ button:hover {
     cursor: pointer;
 }
 
-.registerbtn {
+button.registerbtn {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
