--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -280,17 +280,9 @@ button:hover {
     cursor: pointer;
 }
 
-button.registerbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
-    color: white;
-    border: 2px solid black;
-    float: right;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
+#registerbtn {
+    background-color: #8eb1ee;
+    float: right;    
 }
 
 /* Center the image and position the close button */
