--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -281,7 +281,7 @@ button:hover {
 }
 
 #registerbtn {
-    background-color: #8eb1ee;
+    background-color: #7aa5f0;
     float: right;    
 }
 
@@ -364,6 +364,7 @@ button.log-click {
 
 #cont-1 {
 	background-color: #f1f1f1;
+  min-width: 80px;
 }
 
 #current_user {
