--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -163,7 +163,7 @@ input.text {
 }
 
 .input1 {
-  max-width: 500px;
+  max-width: 600px;
 }
 
 fieldset { 
@@ -268,6 +268,7 @@ button.login {
     cursor: pointer;
     width: 100%;
     max-width: 500px;
+    clear: both;
 }
 
 button:hover {
