--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -163,7 +163,7 @@ input.text {
 }
 
 .input1 {
-  max-width: 100%;
+  max-width: 50%;
   /*max-width: 600px;*/
 }
 
@@ -267,9 +267,9 @@ button.login {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    max-width: 100%;
+    width: 50%;
     /*max-width: 500px;*/
-    clear: both;
+    /*clear: both;*/
 }
 
 button:hover {
