--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -315,8 +315,8 @@ span.psw {
 button.btnRemove {
   font-size:24px; 
   color: red;
-  max-width: 20%;
-  max-height: 50px;
+  max-width: 50%;
+  max-height: 20%;
 }
 
 /* The Modal (background) */
