--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -315,7 +315,7 @@ span.psw {
 button.btnRemove {
   font-size:24px; 
   color: red;
-  height: 30%;
+  max-height: 80px;
   /*max-width: 50%;
   max-height: 20%;*/
 }
