--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -320,9 +320,9 @@ button.btnRemove {
   max-height: 20%;*/
 }
 
-.fa fa-trash {
+/*.fa fa-trash {
   float: right;
-}
+}*/
 
 /* The Modal (background) */
 .modal {
