--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -315,14 +315,15 @@ span.psw {
 button.btnRemove {
   font-size:24px; 
   color: red;
-  max-height: 80px;
+  /*max-height: 80px;*/
   /*max-width: 50%;
   max-height: 20%;*/
 }
 
-/*.fa fa-trash {
-  float: right;
-}*/
+.fa fa-trash {
+  background: purple;
+  float: left;
+}
 
 /* The Modal (background) */
 .modal {
