--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -140,12 +140,14 @@ button.view_rb {
   background: #3B5998;
   color: white;
   width: 50px;
+  height: 40px;
 }
 
 .fa-twitter {
   background: #55ACEE;
   color: white;
   width: 50px;
+  height: 40px;
 }
 
 #shadow {
