--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -435,6 +435,11 @@ button.sendComment {
 }
 
 .delComment {
-  width: 10%;
+  width: 1%;
   float: right;
+  clear: both;
+}
+
+button.delBtn {
+  width: 5%;
 }
