--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -435,13 +435,13 @@ button.sendComment {
 }
 
 .delComment {
-  /*clear: both;  */
+  clear: both;  
   /*width: 1%;*/
   /*float: right;*/
 }
 
 button.delBtn {
   /*clear: both;*/
-  max-width: 30px;
-  max-height: 30px;
+  max-width: 40px;
+  max-height: 40px;
 }
