--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -28,7 +28,7 @@ img.center {
 p.def {
 	color: white;
 	margin: 1% 35%;
-	font-size: 1em;
+	font-size: .8em;
 	font-family: Tahoma "Times New Roman";
 }
 
@@ -139,13 +139,13 @@ button.view_rb {
 .fa-facebook {
   background: #3B5998;
   color: white;
-  width: 45px;
+  width: 50px;
 }
 
 .fa-twitter {
   background: #55ACEE;
   color: white;
-  width: 45px;
+  width: 50px;
   /*height: 80px;*/
 }
 
