--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -128,9 +128,9 @@ button.view_rb {
   height: auto;
   text-align: center;
   text-decoration: none;
-  float: right;
-  border-radius: 60%;
-  margin: 60px 5px 0 2px;
+  /*float: right;*/
+  border-radius: 50%;
+  /*margin: 60px 5px 0 2px;*/
 }
 
 .fa:hover {
@@ -139,13 +139,13 @@ button.view_rb {
 .fa-facebook {
   background: #3B5998;
   color: white;
-  width: 50px;
+  /*width: 50px;*/
 }
 
 .fa-twitter {
   background: #55ACEE;
   color: white;
-  width: 50px;
+  /*width: 50px;*/
   /*height: 80px;*/
 }
 
