--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -124,12 +124,13 @@ button.view_rb {
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 20px;
-  height: auto;
+  width: 30px;
+  /*height: auto;*/
   text-align: center;
   text-decoration: none;
   /*float: right;*/
   border-radius: 50%;
+  margin: 5px 2px;
   /*margin: 60px 5px 0 2px;*/
 }
 
@@ -150,7 +151,7 @@ button.view_rb {
 }
 
 #shadow {
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	/*box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);*/
 }
 
 
