--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -28,7 +28,7 @@ img.center {
 p.def {
   background: blue;
 	color: white;
-	margin: 1% 35%;
+	margin: 1% 0 1% 35%;
 	font-size: .85em;
 	font-family: Tahoma "Times New Roman";
 }
