--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -29,7 +29,7 @@ p.def {
   background: blue;
 	color: white;
 	/*margin: 1% 0 1% 35%;*/
-  /*width: 30%;*/
+  width: 30%;
 	font-size: .85em;
 	font-family: Tahoma "Times New Roman";
 }
