--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -30,6 +30,7 @@ p.def {
 	color: white;
 	/*margin: 1% 0 1% 35%;*/
   width: 30%;
+  float: left;
 	font-size: .85em;
 	font-family: Tahoma "Times New Roman";
 }
