--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -36,7 +36,8 @@ p.def {
 }
 
 #banner {
-	border-bottom: 5px solid #c3a2a2; 
+	border-bottom: 5px solid #c3a2a2;
+  min-height: 300px; 
 	padding-bottom: .5%; 
 	border-radius: 5px;
   width: 100%;
