--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -29,6 +29,7 @@ p.def {
   background: blue;
 	color: white;
 	/*margin: 1% 0 1% 35%;*/
+  margin-left: 25%;
   width: 30%;
   float: left;
 	font-size: .85em;
