--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -460,7 +460,7 @@ button.delBtn {
 
 span.socialButtons {
   display: inline; 
-  float: left; 
-  margin-left: 23%;
-  margin-right: 1%;
+  float: right; 
+  /*margin-left: 23%;*/
+  /*margin-right: 1%;*/
 }
