--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -96,7 +96,7 @@ div.rbItem {
 
 #rbName {
   color: white;
-  margin-left: 12%;
+  /*margin-left: 12%;*/
 	/*width: 70%;
 	float: right;
 	color: white;
@@ -108,13 +108,13 @@ div.rbItem {
 }
 
 div.div1 {
-  width: 70%;
+  width: 50%;
   float: right;
   color: white;
   font-size: 1.1em;
   font-family: Verdana;
   text-align: center;
-  margin: 15% 1% 1% 4%;
+  margin: 15% 1% 1% 30%;
   background: yellow;
 }
 
