--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -81,7 +81,7 @@ div.rbItem {
 	background-color: #5b3a3a;
 	border: 4px solid #c3a2a2; 
 	border-radius: 13px; 
-	padding: .8%;
+	padding: 1%;
 	margin: 1% 37%;
 	min-height: 200px;
 }
