--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -81,7 +81,7 @@ div.rbItem {
 	background-color: #5b3a3a;
 	border: 4px solid #c3a2a2; 
 	border-radius: 13px; 
-	padding: 1%;
+	padding: .8%;
 	margin: 1% 37%;
 	min-height: 200px;
 }
@@ -108,7 +108,7 @@ div.rbItem {
 }
 
 div.infoDiv {
-  margin: 15% 1% 1% 2%;
+  margin: 15% 1% 1% 4%;
   width: 80%;
   font-family: Verdana;
   text-align: center;    
