--- a/web/css/a3.css
+++ b/web/css/a3.css
@@ -322,7 +322,7 @@ button:hover {
 }
 
 #signOffbtn {
-    background-color: #e6f010;
+    background-color: #ea12e7;
     float: right;
     margin-left: 2%;     
 }
